fix: remove horizontal scrolling on iPhone
Video images need to be 345px wide instead of 370

--- a/src/css/home-new.css
+++ b/src/css/home-new.css
@@ -95,7 +95,7 @@
  */
 
 .home-minim-mobile-app-mockup {
-    width: 370px;
+    width: 345px;
 }
 
 @media (min-width: 1200px) {
@@ -205,7 +205,7 @@
 }
 
 .home-oracle-image {
-    width: 370px;
+    width: 345px;
     margin: auto;
 }
 
@@ -381,7 +381,7 @@
 }
 
 .home-amadeus-image {
-    width: 370px;
+    width: 345px;
     margin: auto;
 }
 
